@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add PGP keylength configuration option (Request #12099).
 * [mjr] Expose the Maillog via the public API.
 * [mms] Better handling of flag change attempts when browser cached state (dynamic/smartmobile view) is different than the server state.
 * [mms] Move backend configuration parsing/retrieval to IMP_Imap_Config.
